@@ -20,6 +20,7 @@ import net.minecraft.world.item.crafting.CraftingRecipe;
 import net.minecraft.world.item.crafting.Ingredient;
 import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.item.crafting.SmeltingRecipe;
+import net.minecraft.world.level.ItemLike;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.block.Blocks;
@@ -27,6 +28,7 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
+import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -35,6 +37,302 @@ import static com.ldtteam.structurize.items.ModItems.buildTool;
 /** Standard implementation of IGenericRecipe.*/
 public class GenericRecipe implements IGenericRecipe
 {
+    /** Generic recipe builder */
+    public static class Builder
+    {
+        @Nullable private ResourceLocation id;
+        private List<ItemStack> mainOutputs = List.of();
+        private List<ItemStack> additionalOutputs = List.of();
+        private List<List<ItemStack>> inputs = List.of();
+        private int gridSize = 1;
+        private Block intermediate = Blocks.AIR;
+        private ResourceLocation   lootTable = null;
+        private EquipmentTypeEntry requiredTool = ModEquipmentTypes.none.get();
+        private EntityType<?>      requiredEntity = null;
+        private Supplier<List<Component>> restrictions = List::of;
+        private int levelSort = -1;
+
+        /** Default constructor */
+        public Builder()
+        {
+        }
+
+        /** Construct from an existing recipe */
+        public Builder(@NotNull final IGenericRecipe recipe)
+        {
+            this.id = recipe.getRecipeId();
+            this.mainOutputs = recipe.getAllMultiOutputs();
+            this.additionalOutputs = recipe.getAdditionalOutputs();
+            this.inputs = recipe.getInputs();
+            this.gridSize = recipe.getGridSize();
+            this.intermediate = recipe.getIntermediate();
+            this.lootTable = recipe.getLootTable();
+            this.requiredTool = recipe.getRequiredTool();
+            this.requiredEntity = recipe.getRequiredEntity();
+            this.restrictions = recipe.getRestrictions();
+            this.levelSort = recipe.getLevelSort();
+        }
+
+        /**
+         * Set (or clear) the original source recipe id.
+         * @param id the recipe id.
+         * @return this
+         */
+        public Builder withRecipeId(@Nullable final ResourceLocation id)
+        {
+            this.id = id == null || id.getPath().isEmpty() ? null : id;
+            return this;
+        }
+
+        /**
+         * Set the main output result of this recipe.
+         * @param output the recipe output.
+         * @return this
+         */
+        public Builder withOutput(@NotNull final ItemStack output)
+        {
+            this.mainOutputs = List.of(output);
+            return this;
+        }
+
+        /**
+         * Set the main output result of this recipe.
+         * @param output the recipe output.
+         * @return this
+         */
+        public Builder withOutput(@NotNull final ItemLike output)
+        {
+            return withOutput(new ItemStack(output));
+        }
+
+        /**
+         * Set the main output result of this recipe.
+         * @param output the recipe output.
+         * @param count the count.
+         * @return this
+         */
+        public Builder withOutput(@NotNull final ItemLike output, final int count)
+        {
+            return withOutput(new ItemStack(output, count));
+        }
+
+        /**
+         * Set all possible main outputs (one of these will be generated).
+         * @param multiOutputs the possible recipe outputs.
+         * @return this
+         */
+        public Builder withOutputs(@NotNull final List<ItemStack> multiOutputs)
+        {
+            this.mainOutputs = Collections.unmodifiableList(multiOutputs);
+            return this;
+        }
+
+        /**
+         * Set all possible main outputs (one of these will be generated).
+         * @param firstOutput one of the possible recipe outputs.
+         * @param otherOutputs the other possible recipe outputs.
+         * @return this
+         */
+        public Builder withOutputs(@NotNull final ItemStack firstOutput, @NotNull final List<ItemStack> otherOutputs)
+        {
+            return withOutputs(Stream.concat(Stream.of(firstOutput),
+                    otherOutputs.stream()).filter(ItemStackUtils::isNotEmpty).toList());
+        }
+
+        /**
+         * Set outputs generated in addition to the main outputs (e.g. containers, byproducts).
+         * @param additionalOutputs the additional recipe outputs.
+         * @return this
+         */
+        public Builder withAdditionalOutputs(@NotNull final List<ItemStack> additionalOutputs)
+        {
+            this.additionalOutputs = Collections.unmodifiableList(additionalOutputs);
+            return this;
+        }
+
+        /**
+         * Set recipe inputs.
+         * @param inputs the recipe inputs, as a list of slots each containing a list of acceptable variants.
+         * @return this
+         */
+        public Builder withInputs(@NotNull final List<List<ItemStack>> inputs)
+        {
+            this.inputs = Collections.unmodifiableList(inputs);
+            return this;
+        }
+
+        /**
+         * Set input grid size (e.g. 3 for 3x3 grid).
+         * @param gridSize the grid size.
+         * @return this
+         */
+        public Builder withGridSize(final int gridSize)
+        {
+            this.gridSize = gridSize;
+            return this;
+        }
+
+        /**
+         * Set required intermediate crafting block.
+         * @param intermediate the intermediate block.
+         * @return this
+         */
+        public Builder withIntermediate(@NotNull final Block intermediate)
+        {
+            this.intermediate = intermediate;
+            return this;
+        }
+
+        /**
+         * Set the loot table produced by this recipe.
+         * @param lootTable the loot table id.
+         * @return this
+         */
+        public Builder withLootTable(@Nullable ResourceLocation lootTable)
+        {
+            this.lootTable = lootTable;
+            return this;
+        }
+
+        /**
+         * Set the tool required to craft this recipe.
+         * @param requiredTool the tool entry.
+         * @return this
+         */
+        public Builder withRequiredTool(@NotNull EquipmentTypeEntry requiredTool)
+        {
+            this.requiredTool = requiredTool;
+            return this;
+        }
+
+        /**
+         * Set the entity required to craft this recipe.
+         * @param requiredEntity the entity type.
+         * @return this
+         */
+        public Builder withRequiredEntity(@Nullable EntityType<?> requiredEntity)
+        {
+            this.requiredEntity = requiredEntity;
+            return this;
+        }
+
+        /**
+         * Set the restrictions on crafting this recipe.
+         * @param restrictions the restrictions.
+         * @return this
+         * @apiNote Each restriction is expected to be a translation key for the main JEI display, with
+         *          an optional extra key with .tip suffix for a tooltip.  Both take the same parameters.
+         */
+        public Builder withRestrictions(@NotNull List<Component> restrictions)
+        {
+            final List<Component> fixedRestrictions = Collections.unmodifiableList(restrictions);
+            return withRestrictions(() -> fixedRestrictions);
+        }
+
+        /**
+         * Set the restrictions on crafting this recipe.
+         * @param restrictions the restrictions.
+         * @return this
+         * @apiNote Each restriction is expected to be a translation key for the main JEI display, with
+         *          an optional extra key with .tip suffix for a tooltip.  Both take the same parameters.
+         */
+        public Builder withRestrictions(@NotNull Supplier<List<Component>> restrictions)
+        {
+            this.restrictions = restrictions;
+            return this;
+        }
+
+        /**
+         * Sets a value that helps sort this recipe relative to others.
+         * @param levelSort the sorting value.
+         * @return this
+         */
+        public Builder withLevelSort(final int levelSort)
+        {
+            this.levelSort = levelSort;
+            return this;
+        }
+
+        /**
+         * Builds a recipe from the current builder state.
+         * @return the recipe.
+         */
+        @NotNull
+        public IGenericRecipe build()
+        {
+            return new GenericRecipe(this);
+        }
+    }
+
+    /**
+     * Start building a generic recipe.
+     * @return a builder.
+     */
+    @NotNull
+    public static Builder builder()
+    {
+        return new Builder();
+    }
+
+    /**
+     * Start building a generic recipe.
+     * @param recipe initialise from this recipe.
+     * @return a builder.
+     */
+    @NotNull
+    public static Builder builder(@NotNull final IGenericRecipe recipe)
+    {
+        return new Builder(recipe);
+    }
+
+    /**
+     * Start building a generic recipe.
+     * @param storage initialise from this recipe.
+     * @return a builder.
+     */
+    @NotNull
+    public static Builder builder(@NotNull final IRecipeStorage storage)
+    {
+        final List<List<ItemStack>> inputs = storage.getCleanedInput().stream()
+                .map(input -> Collections.singletonList(toItemStack(input)))
+                .toList();
+
+        return builder()
+                .withRecipeId(storage.getRecipeSource())
+                .withOutputs(storage.getPrimaryOutput(), storage.getAlternateOutputs())
+                .withAdditionalOutputs(storage.getSecondaryOutputs())
+                .withInputs(inputs)
+                .withGridSize(storage.getGridSize())
+                .withIntermediate(storage.getIntermediate())
+                .withLootTable(storage.getLootTable())
+                .withRequiredTool(storage.getRequiredTool());
+    }
+
+    /**
+     * Construct from builder.
+     * @param builder the builder.
+     */
+    private GenericRecipe(@NotNull final Builder builder)
+    {
+        this.id = builder.id;
+        this.mainOutputs = builder.mainOutputs;
+        this.additionalOutputs = builder.additionalOutputs;
+        this.inputs = builder.inputs;
+        this.gridSize = builder.gridSize;
+        this.intermediate = builder.intermediate;
+        this.lootTable = builder.lootTable;
+        this.requiredTool = builder.requiredTool;
+        this.requiredEntity = builder.requiredEntity;
+        this.restrictions = builder.restrictions;
+        this.levelSort = builder.levelSort;
+    }
+
+    /**
+     * Construct from vanilla recipe.
+     * @param recipe the vanilla recipe.
+     * @param world the world.
+     * @return the recipe, or null.
+     */
     @Nullable
     public static IGenericRecipe of(@Nullable final Recipe<?> recipe, @NotNull final Level world)
     {
@@ -42,110 +340,45 @@ public class GenericRecipe implements IGenericRecipe
 
         final List<List<ItemStack>> inputs = compactInputs(recipe.getIngredients().stream()
                 .map(ingredient -> Arrays.asList(ingredient.getItems()))
-                .collect(Collectors.toList()));
-        final int size;
-        final Block intermediate;
+                .toList());
+
+        final Builder builder = builder()
+                .withRecipeId(recipe.getId())
+                .withOutput(recipe.getResultItem(world.registryAccess()))
+                .withAdditionalOutputs(calculateSecondaryOutputs(recipe, world))
+                .withInputs(inputs);
+
         if (recipe instanceof SmeltingRecipe)
         {
-            size = 1;
-            intermediate = Blocks.FURNACE;
+            builder.withGridSize(1).withIntermediate(Blocks.FURNACE);
         }
         else
         {
-            size = recipe.canCraftInDimensions(2, 2) ? 2 : 3;
-            intermediate = Blocks.AIR;
+            builder.withGridSize(recipe.canCraftInDimensions(2, 2) ? 2 : 3);
         }
-        return new GenericRecipe(recipe.getId(), recipe.getResultItem(world.registryAccess()), calculateSecondaryOutputs(recipe, world), inputs,
-                size, intermediate, null, ModEquipmentTypes.none.get(), new ArrayList<>(), -1);
-    }
 
-    @Nullable
-    public static IGenericRecipe of(@Nullable final IRecipeStorage storage, @NotNull final List<Component> restrictions, final int levelSort)
-    {
-        if (storage == null) return null;
-        final List<List<ItemStack>> inputs = storage.getCleanedInput().stream()
-                .map(input -> Collections.singletonList(toItemStack(input)))
-                .collect(Collectors.toList());
-        return new GenericRecipe(storage.getRecipeSource(), storage.getPrimaryOutput(), storage.getAlternateOutputs(),
-                storage.getSecondaryOutputs(), inputs, storage.getGridSize(),
-                storage.getIntermediate(), storage.getLootTable(), storage.getRequiredTool(), null, restrictions, levelSort);
-    }
-
-    @Nullable
-    public static IGenericRecipe of(@Nullable final IRecipeStorage storage)
-    {
-        return of(storage, new ArrayList<>(), -1);
+        return builder.build();
     }
 
     @Nullable
     public static IGenericRecipe of(@Nullable final IToken<?> recipeToken)
     {
         if (recipeToken == null) return null;
-        return of(IColonyManager.getInstance().getRecipeManager().getRecipes().get(recipeToken));
+        final IRecipeStorage storage = IColonyManager.getInstance().getRecipeManager().getRecipes().get(recipeToken);
+        return storage == null ? null : builder(storage).build();
     }
 
     @Nullable private final ResourceLocation id;
-    private final ItemStack output;
-    private final List<ItemStack> allMultiOutputs;
+    private final List<ItemStack> mainOutputs;
     private final List<ItemStack> additionalOutputs;
     private final List<List<ItemStack>> inputs;
     private final int gridSize;
     private final Block intermediate;
-    private final ResourceLocation   lootTable;
+    @Nullable private final ResourceLocation   lootTable;
     private final EquipmentTypeEntry requiredTool;
-    private final EntityType<?>      requiredEntity;
-    private final List<Component> restrictions;
+    @Nullable private final EntityType<?>      requiredEntity;
+    private final Supplier<List<Component>> restrictions;
     private final int levelSort;
-
-    public GenericRecipe(@Nullable final ResourceLocation id,
-                         @NotNull final ItemStack output,
-                         @NotNull final List<ItemStack> additionalOutputs,
-                         @NotNull final List<List<ItemStack>> inputs,
-                         final int gridSize, @NotNull final Block intermediate,
-                         @Nullable final ResourceLocation lootTable,
-                         @NotNull final EquipmentTypeEntry requiredTool,
-                         @NotNull final List<Component> restrictions,
-                         final int levelSort)
-    {
-        this.id = id == null || id.getPath().isEmpty() ? null : id;
-        this.output = output;
-        this.allMultiOutputs = Collections.singletonList(output);
-        this.additionalOutputs = Collections.unmodifiableList(additionalOutputs);
-        this.inputs = Collections.unmodifiableList(inputs);
-        this.gridSize = gridSize;
-        this.intermediate = intermediate;
-        this.lootTable = lootTable;
-        this.requiredTool = requiredTool;
-        this.requiredEntity = null;
-        this.restrictions = Collections.unmodifiableList(restrictions);
-        this.levelSort = levelSort;
-    }
-
-    public GenericRecipe(@Nullable final ResourceLocation id,
-                         @NotNull final ItemStack output,
-                         @NotNull final List<ItemStack> altOutputs,
-                         @NotNull final List<ItemStack> additionalOutputs,
-                         @NotNull final List<List<ItemStack>> inputs,
-                         final int gridSize, @NotNull final Block intermediate,
-                         @Nullable final ResourceLocation lootTable,
-                         @NotNull final EquipmentTypeEntry requiredTool,
-                         @Nullable final EntityType<?> requiredEntity,
-                         @NotNull final List<Component> restrictions,
-                         final int levelSort)
-    {
-        this.id = id;
-        this.output = output;
-        this.allMultiOutputs = Stream.concat(Stream.of(output), altOutputs.stream()).filter(ItemStackUtils::isNotEmpty).toList();
-        this.additionalOutputs = Collections.unmodifiableList(additionalOutputs);
-        this.inputs = Collections.unmodifiableList(inputs);
-        this.gridSize = gridSize;
-        this.intermediate = intermediate;
-        this.lootTable = lootTable;
-        this.requiredTool = requiredTool;
-        this.requiredEntity = requiredEntity;
-        this.restrictions = Collections.unmodifiableList(restrictions);
-        this.levelSort = levelSort;
-    }
 
     @Override
     public int getGridSize() { return this.gridSize; }
@@ -161,13 +394,13 @@ public class GenericRecipe implements IGenericRecipe
     @NotNull
     public ItemStack getPrimaryOutput()
     {
-        return this.output;
+        return this.mainOutputs.isEmpty() ? ItemStack.EMPTY : this.mainOutputs.get(0);
     }
 
     @NotNull
     public List<ItemStack> getAllMultiOutputs()
     {
-        return this.allMultiOutputs;
+        return this.mainOutputs;
     }
 
     @NotNull
@@ -186,7 +419,7 @@ public class GenericRecipe implements IGenericRecipe
 
     @NotNull
     @Override
-    public List<Component> getRestrictions()
+    public Supplier<List<Component>> getRestrictions()
     {
         return this.restrictions;
     }
@@ -200,7 +433,7 @@ public class GenericRecipe implements IGenericRecipe
     @Override
     public Optional<Boolean> matchesOutput(@NotNull OptionalPredicate<ItemStack> predicate)
     {
-        return predicate.test(this.output);
+        return predicate.test(getPrimaryOutput());
     }
 
     @Override
@@ -256,7 +489,7 @@ public class GenericRecipe implements IGenericRecipe
     @Override
     public String toString()
     {
-        return "GenericRecipe{output=" + output +'}';
+        return "GenericRecipe{output=" + getPrimaryOutput() +'}';
     }
 
     @NotNull
@@ -271,7 +504,7 @@ public class GenericRecipe implements IGenericRecipe
     private static List<ItemStack> calculateSecondaryOutputs(@NotNull final Recipe<?> recipe,
                                                              @Nullable final Level world)
     {
-        if (recipe instanceof CraftingRecipe)
+        if (recipe instanceof final CraftingRecipe craftingRecipe)
         {
             final List<Ingredient> inputs = recipe.getIngredients();
             final CraftingContainer inv = new TransientCraftingContainer(new AbstractContainerMenu(MenuType.CRAFTING, 0)
@@ -297,9 +530,9 @@ public class GenericRecipe implements IGenericRecipe
                     inv.setItem(slot, stacks[0].copy());
                 }
             }
-            if (((CraftingRecipe) recipe).matches(inv, world))
+            if (craftingRecipe.matches(inv, world))
             {
-                return ((CraftingRecipe) recipe).getRemainingItems(inv).stream()
+                return craftingRecipe.getRemainingItems(inv).stream()
                         .filter(ItemStackUtils::isNotEmpty)
                         .filter(stack -> stack.getItem() != buildTool.get())  // this is filtered out of the inputs too
                         .collect(Collectors.toList());
